--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,106 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+div {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  /* display:block; */
+}
+/* .outerbox{
+height:200px;
+width:200px;
+border-radius: 10px;
+margin:auto;
+background-color:#733B1E;
+padding-top: 5px;} */
+
+.innerbox{
+/* margin: auto; */
+height:180px;
+width:180px;
+border-radius: 10px;
+padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+/* background-color:black;} */
 }
 
-.App-link {
-  color: #61dafb;
+.box{
+height:178px;
+width:178px;
+border-radius: 10px;
+margin: auto;
+padding-top: 2px;
+  padding-right: 2px;
+  padding-bottom: 2px;
+  padding-left: 2px;
+background-color:#00ffff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.glass{
+padding-top: 20px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 60px;
+}
+
+
+.a{
+height:50px;
+width:50px;
+text-align: center;
+-webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+background-color:#EEF0F2;
+}
+
+.b{
+margin-top: -28%;
+margin-right: 10%;
+height: 50px;
+width: 50px;
+box-sizing: border-box;
+border-radius: 90%;
+background-color:#800080;
+}
+
+.b2{
+margin-top: -28%;
+margin-right: 10%;
+height: 50px;
+width: 50px;
+box-sizing: border-box;
+border-radius: 90%;
+background-color:#fafae4;
+}
+
+.rod{
+margin-top:-4%;
+height:50px;
+width:50px;
+-webkit-clip-path: ellipse(4% 40% at 50% 50%);
+clip-path: ellipse(4% 40% at 50% 50%);
+background-color:#EEF0F2;
+}
+
+.base{
+margin-left:-10.5%;
+margin-top:-60%;
+height:65px;
+width:15px;
+left:20px;
+padding-left: 60px;
+-webkit-clip-path: polygon(50% 88%, 0% 100%, 100% 100%);
+clip-path: polygon(50% 88%, 0% 100%, 100% 100%);
+background-color:#EEF0F2;
+}
+
+legend.MuiFormLabel-root {
+  color: red;
+  font-size: 20px;
+}
+
+.wineMatch {
+color: blue;
+}
+.wineMatchName {
+  color: pink;
 }
