--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ padding-top: 5px;
 /* background-color:black;} */
 }
 
-.box{
+.box {
 height:178px;
 width:178px;
 border-radius: 10px;
@@ -32,10 +32,10 @@ padding-top: 2px;
   padding-right: 2px;
   padding-bottom: 2px;
   padding-left: 2px;
-background-color:#00ffff;
+background-color:#ff9e00;
 }
 
-.glass{
+.glass {
 padding-top: 20px;
   padding-right: 10px;
   padding-bottom: 10px;
@@ -43,7 +43,7 @@ padding-top: 20px;
 }
 
 
-.a{
+.a {
 height:50px;
 width:50px;
 text-align: center;
@@ -52,7 +52,7 @@ clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
 background-color:#EEF0F2;
 }
 
-.b{
+.b {
 margin-top: -28%;
 margin-right: 10%;
 height: 50px;
@@ -62,7 +62,7 @@ border-radius: 90%;
 background-color:#800080;
 }
 
-.b2{
+.b2 {
 margin-top: -28%;
 margin-right: 10%;
 height: 50px;
@@ -72,7 +72,7 @@ border-radius: 90%;
 background-color:#fafae4;
 }
 
-.rod{
+.rod {
 margin-top:-4%;
 height:50px;
 width:50px;
@@ -81,7 +81,7 @@ clip-path: ellipse(4% 40% at 50% 50%);
 background-color:#EEF0F2;
 }
 
-.base{
+.base {
 margin-left:-10.5%;
 margin-top:-60%;
 height:65px;
@@ -94,13 +94,96 @@ background-color:#EEF0F2;
 }
 
 legend.MuiFormLabel-root {
-  color: red;
+  color: rgb(247, 20, 62);
   font-size: 20px;
+  margin-bottom: 7%;
 }
 
 .wineMatch {
 color: blue;
 }
+
 .wineMatchName {
   color: pink;
+}
+
+.poultry {
+  color: black;
+}
+
+.dreamer .MuiTypography-body1 {
+font-family:'Chilanka', cursive;
+font-weight: 900;
+font-size: 1.2em;
+color: orange;
+}
+
+.difficult .MuiTypography-body1 {
+  font-family: 'Gayathri', sans-serif;
+  font-weight: 900;
+  font-size: 1.2em;
+  color:blue;
+}
+
+.sweetie .MuiTypography-body1 {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 900;
+  font-size: 1.3em;
+  color:lightcoral;
+}
+
+.reserved .MuiTypography-body1 {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1.2em;
+  font-weight: 900;
+  color:purple;
+}
+
+.wineResult{
+  display: flex;
+  font-size: 1.2em;
+  justify-content: space-evenly;
+  margin-top:5%;
+}
+
+.wineQuotes {
+  font-family: 'Amatic SC', cursive;
+  font-size: 2.5em;
+  text-align: center;
+  /* margin: 0 auto; */
+}
+
+.wineMatch {
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+
+}
+
+.wineMatchName {
+  font-family: 'Archivo Black', sans-serif;
+  color:black;
+}
+
+.head {
+  display:block;
+  /* justify-content: center; */
+  font-family: 'Montserrat', sans-serif;
+}
+.title {
+  margin: 0 auto;
+  font-family: 'Tangerine', cursive;
+  font-size: 4em;
+}
+
+.subtitle {
+  margin: 0 auto;
+}
+
+.innerboxResult {
+  margin: 0 5%;
+}
+
+footer{
+margin: 0 auto;
+margin-top: 20%;
 }
